--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 <section>
     <h2 class="layer" data-speed="1">C'est l'été !</h2>
-    <img class="layer hotairballoon" src="parallaxJS/img/hotairballoon.png" alt="" data-speed="-3">
-    <img class="layer parachute" src="parallaxJS/img/parachute.png" alt="" data-speed="3">
-    <img class="layer paraglider" src="parallaxJS/img/parapente.png" alt="" data-speed="8">
+    <img class="layer hotairballoon" src="img/hotairballoon.png" alt="" data-speed="5">
+    <img class="layer parachute" src="img/parachute.png" alt="" data-speed="3">
+    <img class="layer paraglider" src="img/parapente.png" alt="" data-speed="8">
 </section>
 </body>
 <script src="parallax.js" type="text/javascript"></script>
